--- a/pkg/test/testutil/BUILD
+++ b/pkg/test/testutil/BUILD
@@ -22,7 +22,7 @@ go_library(
         "//runsc/flag",
         "//runsc/specutils",
         "@com_github_cenkalti_backoff//:go_default_library",
-        "@com_github_kr_pty//:go_default_library",
+        "@com_github_creack_pty//:go_default_library",
         "@com_github_opencontainers_runtime_spec//specs-go:go_default_library",
         "@org_golang_x_sys//unix:go_default_library",
     ],
